--- a/ansible.cfg
+++ b/ansible.cfg
@@ -122,6 +122,7 @@ hash_behaviour = merge
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
 #vault_password_file = /path/to/vault_password_file
+vault_password_file = ~/.ssh/secure_located_file
 
 # format of string {{ ansible_managed }} available within Jinja2
 # templates indicates to users editing templates files will be replaced.
